--- a/CulturalCenterLibrary/app/src/main/res/layout/activity_main.xml
+++ b/CulturalCenterLibrary/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txtMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cultural Center Library"
+        android:text="@string/cultural_center_library"
         android:textSize="25sp"
         android:layout_gravity="center"
         android:gravity="center"
@@ -73,7 +73,8 @@
                         android:layout_height="wrap_content"
                         android:background="@color/lib_greyblue"
                         android:id="@+id/qrImageBtn"
-                        android:padding="50dp"
+                        android:paddingStart="50dp"
+                        android:paddingEnd="10dp"
                         android:layout_alignTop="@+id/txtEdit"
                         android:layout_alignBottom="@+id/txtEdit"
                         android:layout_alignEnd="@+id/txtEdit"
@@ -98,14 +99,14 @@
                     android:background="@color/lib_yellow"
                     android:gravity="center"/>
 
-<!--                <Button-->
-<!--                    android:id="@+id/cancel_button"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="@string/cancel"-->
-<!--                    android:layout_margin="16dp"-->
-<!--                    android:gravity="center"-->
-<!--                    />-->
+                <!--                <Button-->
+                <!--                    android:id="@+id/cancel_button"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:text="@string/cancel"-->
+                <!--                    android:layout_margin="16dp"-->
+                <!--                    android:gravity="center"-->
+                <!--                    />-->
             </LinearLayout>
 
         </LinearLayout>
