--- a/CulturalCenterLibrary/app/src/main/res/values-night/themes.xml
+++ b/CulturalCenterLibrary/app/src/main/res/values-night/themes.xml
@@ -1,13 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CulturalCenterLibrary" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.CulturalCenterLibrary" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/lib_blue</item>
-        <item name="colorPrimaryVariant">@color/lib_greyblue</item>
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/lib_green</item>
-        <item name="colorSecondaryVariant">@color/lib_orange</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
