minor changes and working on scanner activities and api

--- a/CulturalCenterLibrary/app/src/main/res/layout/activity_menu_screen.xml
+++ b/CulturalCenterLibrary/app/src/main/res/layout/activity_menu_screen.xml
@@ -11,10 +11,22 @@
         android:id="@+id/checkoutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/lib_yellow"
+        android:background="@drawable/roundedbtn"
         android:text="Checkout"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/scannerBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scanner"
+        android:textColor="@color/white"
+        android:background="@drawable/roundedbtn"
+        app:layout_constraintBottom_toTopOf="@+id/checkoutBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
