--- a/CulturalCenterLibrary/app/src/main/res/values/colors.xml
+++ b/CulturalCenterLibrary/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="lib_orange">#FF8D17</color>
     <color name="lib_greyblue">#c0d6df</color>
     <color name="lib_green">#008000</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
 </resources>
